@@ -136,9 +136,7 @@ public class Table implements TableOrView, TableSchema, Closeable {
      */
 
     public boolean isValid() {
-        if (nativePtr == 0)
-            return false;
-        return nativeIsValid(nativePtr);
+        return nativePtr != 0 && nativeIsValid(nativePtr);
     }
 
     protected native boolean nativeIsValid(long nativeTablePtr);
@@ -169,7 +167,7 @@ public class Table implements TableOrView, TableSchema, Closeable {
 
     @Override
     public TableSchema getSubtableSchema(long columnIndex) {
-        if(nativeIsRootTable(nativePtr) == false) {
+        if(!nativeIsRootTable(nativePtr)) {
             throw new UnsupportedOperationException("This is a subtable. Can only be called on root table.");
         }
 
@@ -415,7 +413,7 @@ public class Table implements TableOrView, TableSchema, Closeable {
             case INTEGER:
                 long pkValue;
                 try {
-                    pkValue = new Long(primaryKeyValue.toString());
+                    pkValue = Long.valueOf(primaryKeyValue.toString());
                 } catch (RuntimeException e) {
                     throw new IllegalArgumentException("Primary key value is not a long: " + primaryKeyValue);
                 }
@@ -517,10 +515,10 @@ public class Table implements TableOrView, TableSchema, Closeable {
                 nativeInsertLong(nativePtr, columnIndex, rowIndex, intValue);
                 break;
             case FLOAT:
-                nativeInsertFloat(nativePtr, columnIndex, rowIndex, ((Float)value).floatValue());
+                nativeInsertFloat(nativePtr, columnIndex, rowIndex, (Float) value);
                 break;
             case DOUBLE:
-                nativeInsertDouble(nativePtr, columnIndex, rowIndex, ((Double)value).doubleValue());
+                nativeInsertDouble(nativePtr, columnIndex, rowIndex, (Double) value);
                 break;
             case STRING:
                 String stringValue = (String) value;
@@ -638,12 +636,11 @@ public class Table implements TableOrView, TableSchema, Closeable {
                     ") does not match the number of columns in the table (" +
                     String.valueOf(columns) + ").");
         }
+
         // Verify type of 'values'
-        ColumnType colTypes[] = new ColumnType[columns];
         for (int columnIndex = 0; columnIndex < columns; columnIndex++) {
             Object value = values[columnIndex];
             ColumnType colType = getColumnType(columnIndex);
-            colTypes[columnIndex] = colType;
             if (!colType.matchObject(value)) {
                 throw new IllegalArgumentException("Invalid argument no " + String.valueOf(1 + columnIndex) +
                         ". Expected a value compatible with column type " + colType + ", but got " + value.getClass() + ".");
@@ -674,10 +671,13 @@ public class Table implements TableOrView, TableSchema, Closeable {
             return cachedPrimaryKeyColumnIndex;
         } else {
             Table pkTable = getPrimaryKeyTable();
-            if (pkTable == null) return NO_PRIMARY_KEY; // Free table = No primary key
+            if (pkTable == null) {
+                return NO_PRIMARY_KEY; // Free table = No primary key
+            }
             long rowIndex = pkTable.findFirstString(PRIMARY_KEY_CLASS_COLUMN_INDEX, getName());
             if (rowIndex != NO_MATCH) {
-                cachedPrimaryKeyColumnIndex = pkTable.getRow(rowIndex).getLong(PRIMARY_KEY_FIELD_COLUMN_INDEX);
+                String pkColumnName = pkTable.getRow(rowIndex).getString(PRIMARY_KEY_FIELD_COLUMN_INDEX);
+                cachedPrimaryKeyColumnIndex = getColumnIndex(pkColumnName);
             } else {
                 cachedPrimaryKeyColumnIndex = NO_PRIMARY_KEY;
             }
@@ -692,10 +692,7 @@ public class Table implements TableOrView, TableSchema, Closeable {
      * @return              True if column is a primary key, false otherwise.
      */
     public boolean isPrimaryKey(long columnIndex) {
-        if (columnIndex < 0) {
-            return false;
-        }
-        return columnIndex == getPrimaryKey();
+        return columnIndex >= 0 && columnIndex == getPrimaryKey();
     }
 
     /**
@@ -1178,8 +1175,7 @@ public class Table implements TableOrView, TableSchema, Closeable {
         if (pkTable == null) {
             throw new RealmException("Primary keys are only supported if Table is part of a Group");
         }
-        long index = nativeSetPrimaryKey(pkTable.nativePtr, nativePtr, columnName);
-        cachedPrimaryKeyColumnIndex = index;
+        cachedPrimaryKeyColumnIndex = nativeSetPrimaryKey(pkTable.nativePtr, nativePtr, columnName);
     }
 
     private native long nativeSetPrimaryKey(long privateKeyTableNativePtr, long nativePtr, String columnName);
@@ -1193,11 +1189,22 @@ public class Table implements TableOrView, TableSchema, Closeable {
         Table pkTable = group.getTable(PRIMARY_KEY_TABLE_NAME);
         if (pkTable.getColumnCount() == 0) {
             pkTable.addColumn(ColumnType.STRING, PRIMARY_KEY_CLASS_COLUMN_NAME);
-            pkTable.addColumn(ColumnType.INTEGER, PRIMARY_KEY_FIELD_COLUMN_NAME);
+            pkTable.addColumn(ColumnType.STRING, PRIMARY_KEY_FIELD_COLUMN_NAME);
+        } else {
+            migratePrimaryKeyTableIfNeeded(group, pkTable);
         }
 
         return pkTable;
     }
+
+    // Migration required to fix https://github.com/realm/realm-java/issues/1059
+    // This will convert INTEGER column to the corresponding STRING column if needed.
+    // Any database created on Realm-Java 0.80.1 and below will have this error.
+    private void migratePrimaryKeyTableIfNeeded(Group group, Table pkTable) {
+        nativeMigratePrimaryKeyTableIfNeeded(group.nativePtr, pkTable.nativePtr);
+    }
+
+    private native void nativeMigratePrimaryKeyTableIfNeeded(long groupNativePtr, long primaryKeyTableNativePtr);
 
     // Recursively look at parents until either a Group or null is found
     Group getTableGroup() {
